# scapi

./: .gitignore  Cargo.toml  README.md  response_select.json  response_stream.json  run_scapi.sh
benches/: criterion_fetch_bench.rs
examples/: benchmark_fetch.rs  memory_bench.rs
scripts/: construct_payload.py  inspect_exclusion.py  run_benchmark.sh  run_scapi.sh  run_scapi_pipeline.sh  test_exclusion.sh  test_select_api.sh  test_simple.sh  verify_select.sh  verify_streaming.py
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/handler/: extract.rs  fetch.rs  health.rs  mod.rs  parse.rs  scrape.rs  select.rs  select_stream.rs
src/api/middleware/: error_handler.rs  metrics.rs  mod.rs  request_id.rs
src/api/model/: error.rs  mod.rs  request.rs  response.rs
src/common/: error.rs  metrics.rs  mod.rs  types.rs
src/domain/: mod.rs
src/domain/extract/: config.rs  error.rs  mod.rs  rules.rs  service.rs
src/domain/fetch/: config.rs  error.rs  mod.rs  service.rs
src/domain/parse/: config.rs  error.rs  mod.rs  models.rs  service.rs
src/domain/select/: config.rs  error.rs  mod.rs  selector.rs  service.rs  xpath.rs
src/infra/: mod.rs
src/infra/config/: loader.rs  mod.rs
src/infra/http/: client.rs  mod.rs  streaming.rs
src/infra/logging/: mod.rs  tracer.rs
src/infra/parser/: html.rs  htmler_adapter.rs  mod.rs  streaming_adapter.rs  vdom.rs
tests/: extract_test.rs
