[package]
name = "scapi"
version = "0.1.0"
edition = "2024"
description = "Scalable CSS/XPath API - Production-ready HTTP API for atomic web scraping operations"
repository = "https://github.com/yourusername/scapi"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["web-scraping", "api", "http", "css", "xpath", "async"]
categories = ["web-programming", "api-bindings"]

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = [
    "cors",
    "trace",
    "compression-full",
    "request-id",
] }

# Streaming
futures = "0.3"
pin-project = "1.1"
tokio-util = { version = "0.7", features = ["codec", "io"] }
async-stream = "0.3"
lru = "0.12"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }

# HTML parsing
scraper = "0.17" # Primary HTML parser
tl = "0.7"       # Alternative parser for large files

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenv = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTML Utilities
html-escape = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

# Additional utilities
bytes = "1.5"
http = "1.0"
hyper = "0.14"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "criterion_fetch_bench"
harness = false

[[bin]]
name = "fetch_benchmark"
path = "src/bin/fetch_benchmark.rs"



# [[bench]]
# name = "parse_bench"
# harness = false
#
# [[bench]]
# name = "scrape_bench"
# harness = false
